2010-11-03  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16197: Optimize stdWrap usage for TypoScript content element FILE (Thanks to Jo Hasenau)
	* Fixed bug #16199: Optimize stdWrap usage for TypoScript content element HMENU (Thanks to Jo Hasenau)
	* Fixed bug #16189: Optimize stdWrap usage for TypoScript content element CLEARGIF (Thanks to Jo Hasenau)
	* Fixed bug #16217: Regression : Typoscript "required" did not work anymore (Thanks to Jo Hasenau)
	* Fixed bug #16227: Optimize stdWrap usage for TypoScript content element HTML (Thanks to Jo Hasenau)
	* Fixed bug #16226: Optimize stdWrap usage for TypoScript content element HRULER (Thanks to Jo Hasenau)
	* Fixed bug #15995: Bug: doktype limitation is not applied to alternative page languages (pages_language_overlay) (Thanks to Andreas Kiessling)
	* Fixed bug #16225: Disable draft workspace and migrate it to a real workspace (Thanks to Tolleiv Nietsch)
	* Added feature #16228: [Feature] TCA tree (Thanks to Steffen Ritter)

2010-11-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16175: htmlArea RTE: The path of classesAnchor images are modified when saving

2010-11-02  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #14994: Fixed call to log deprecated function

2010-11-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to feature #16079: htmlArea RTE: Register RTE scripts with the autoloader
	* Fixed bug #16167: htmlArea RTE: Doesn't work in IE6 in current trunk

2010-11-02  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16173: Refactor FLUIDTEMPLATE cObject to use the new Fluid standalone view (Thanks to Bastian Waidelich)

2010-11-02  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #16177: Add DB structure update pre-processing hook in EM

2010-11-01  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #11957: Close Button is at the wrong place when editing a file in filelist (Thanks to Simon Schaufelberger)

2010-11-01  Ernesto Baschny  <ernst@cron-it.de>
